--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -349,6 +349,63 @@ C/S MMO 架构限制:
 3. 游戏服务器维护费用高
 4. 服务器维护期间无法进行游戏
 
+## 4.4 系统基本结构图的制定
+
+输入:
+1. 确认期望的同时连接数
+2. 确认预期的系统瓶颈
+
+![C/S MMO 系统可能的瓶颈](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+194 P
+
+### 4.4.4 解决游戏服务器/数据库的瓶颈
+
+1. 空间分割法, 用来解决服务器瓶颈.
+2. 实例法(游戏副本实例), 将负荷特别高的, 用户集中在一起的部分独立出来, 将这些部分分配给专用的服务器来处理, 用来解决服务器瓶颈.
+3. 平行世界方式, 将游戏数据库分割为多个, 用来解决数据库瓶颈.
+
+### 4.4.13 根据游戏逻辑的处理成本估算同时在线数
+
+估算公式:
+同时在线数 * 每个玩家所面对的敌人数 * 每秒敌人的行动次数 * 每次行动所需的 CPU 时间 * 安全系数 = 1秒
+
+### 4.4.14 根据游戏数据库的处理负荷估算同时在线数
+
+估算公式:
+同时在线数 * 每个连接平均的数据存储频率 * 1 次存储所需的查询数 * 安全系数 = 数据库服务器支持的查询频率
+
+### 4.4.16 服务器的基本结构, 制定系统基本结构图
+
+![系统基本结构图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+210 P
+
+## 4.5 进程关系图的制定
+
+
+| 名称 | 本书中的缩略语 | 用途 |
+| ------ | ------ | ------ |
+| 客户端 | cli | 用户直接使用的, 用于访问游戏服务器的专用程序 |
+| 游戏服务器 | gmsv | 游戏逻辑的处理, 包括执行敌人的行动, 地形判断, 事件, 角色升级, 作弊检测 |
+| 登录服务器 | loginsv | 负责服务整体使用情况的管理, 负荷的控制以及会话密钥的发放 |
+| 数据库服务器 | dbsv | 对 MySQL 和 Oracle 等 DBMS 进行统一的连接 |
+| 反向代理服务器 | proxy | 接受来自多个客户端的同时连接, 负责进行 TCP 会话本身的管理, 数据的解压缩以及解密, 减轻游戏服务器的负荷 |
+| 消息服务器 | msgsv | 支撑网上聊天, 即时消息, 公会等社交活动 |
+| 世界服务器 | worldsv | 使用空间分割的情况下, 属于该世界的所有 gmsv 连接至这个服务器进程, 负责各个世界共同需要的处理 |
+| 通用数据库服务器 | commondbsv | 在使用平行世界的情况下, 用于实现所有世界都需要的内存处理. 除了作为 msgsv 的后端,　还多用来进行实时统计处理和等级排名 |
+| 收费认证服务器 | authsv | 与结算公司之间的网关 |
+| 日志服务器 | logsv | 通过 TCP 收集整个服务器中的日志 |
+| DBMS | DBMS | 数据库进程 |
+| 结算公司服务器 | 结算sv | 结算公司所管理的服务器 |
+
+* gmsv, loginsv, msgsv, proxy 这些靠近服务前方的进程称为 "前端", 除此之外都称为 "后端".
+* 实现用来表示服务器的连接必不可少的线, 虚线表示即使切断也无所谓的线.
+* 黑色四边形所示的部分表示在不使用中间件时, 必须自己制作, 灰色四边形表示使用 MySQL 等现成的程序
+* 所有的 gmsv 都连接到 dbsv, authsv, worldsv 上
+* backup 指通过单纯的复制来备份数据库
+* gmsv 能增加到 3 个以上, 目标是 20~30 个
+* 一个 gmsv 对应一个 proxy, 两个以上也可以
+* msgsv 和 loginsv 各有一个就够了
+* authsv 通常也不需要多个
 
 
 
