--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -381,7 +381,6 @@ C/S MMO 架构限制:
 
 ## 4.5 进程关系图的制定
 
-
 | 名称 | 本书中的缩略语 | 用途 |
 | ------ | ------ | ------ |
 | 客户端 | cli | 用户直接使用的, 用于访问游戏服务器的专用程序 |
@@ -391,7 +390,7 @@ C/S MMO 架构限制:
 | 反向代理服务器 | proxy | 接受来自多个客户端的同时连接, 负责进行 TCP 会话本身的管理, 数据的解压缩以及解密, 减轻游戏服务器的负荷 |
 | 消息服务器 | msgsv | 支撑网上聊天, 即时消息, 公会等社交活动 |
 | 世界服务器 | worldsv | 使用空间分割的情况下, 属于该世界的所有 gmsv 连接至这个服务器进程, 负责各个世界共同需要的处理 |
-| 通用数据库服务器 | commondbsv | 在使用平行世界的情况下, 用于实现所有世界都需要的内存处理. 除了作为 msgsv 的后端,　还多用来进行实时统计处理和等级排名 |
+| 通用数据库服务器 | commondbsv | 在使用平行世界的情况下, 对所有世界共同需要的信息进行持久化. 除了作为 msgsv 的后端,　还多用来进行实时统计处理和等级排名 |
 | 收费认证服务器 | authsv | 与结算公司之间的网关 |
 | 日志服务器 | logsv | 通过 TCP 收集整个服务器中的日志 |
 | DBMS | DBMS | 数据库进程 |
@@ -407,12 +406,75 @@ C/S MMO 架构限制:
 * msgsv 和 loginsv 各有一个就够了
 * authsv 通常也不需要多个
 
+![使用空间复制法的进程关系](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+212 P
 
+![同时使用空间复制法和平行世界情况下的进程关系](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+213 P
 
+## 4.6 带宽/服务器资源估算
 
+进行估算时, 将服务器分为 "以 CPU 为中心的服务器" 和 "以存储为中心的服务器", 它们各自的特点如下:
+* 以 CPU 为中心的服务器: CPU 较快, 内核较多, 内存一般, 存储量小, 容错性低, 一次性的
+* 以存储为中心的服务器: CPU 一般, 内核一般, 内存高, 存储量大, 容错性高, 使用期长
 
+带宽的估算基于每个客户端正常运行所需的平均数据量
 
+## 4.6 协议定义文档的制定
 
+所有进程间通信基本上都是采用基于 TCP 的 RPC, 只要能对 "进程之间的通信以怎样的顺序调用怎么的函数" 进行定义, 就能完成协议的定义了. 协议是无状态和简单操作的集合.
+
+优秀的 API 调用时序:
+1. 不调用 API 是最优的
+2. 只调用没有返回值的 API, 单向时序图 
+![单向时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+228 P
+3. 只调用一次然后获取返回值的呈三角形的时序图
+![三角形时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+229 P
+4. 锯齿状的时序图
+![锯齿状时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+229 P
+
+![认证操作的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+241 P
+
+![角色创建的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+242 P
+
+![登录 gmsv 的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+243 P
+
+![登录 msgsv 的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+243 P
+
+![从 gmsv 登出的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+244 P
+
+![gmsv 中的角色移动](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+244 P
+
+![gmsv 中角色的商业操作](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+245 P
+
+![msgsv 中向好友列表添加, 删除好友](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+246 P
+
+![向在线好友发送消息](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
+246 P
+
+## 4.11 数据库设计图
+
+## 4.12 服务器/客户端软件 + 中间件
+
+## 4.13 程序开发中的基本原则
+
+* 数据结构优先原则
+* 维持可玩状态原则
+* 后端服务器延后开发原则
+* 持续测定原则(开发过程中不断度量系统的性能数据)
+
+视频游戏中的数据分类包括 "基本不会变化的部分" 和 "频繁变化的部分"
 
 
 
