--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -474,7 +474,13 @@ C/S MMO 架构限制:
 * 后端服务器延后开发原则
 * 持续测定原则(开发过程中不断度量系统的性能数据)
 
-视频游戏中的数据分类包括 "基本不会变化的部分" 和 "频繁变化的部分"
+视频游戏中的数据分类包括 "基本不会变化的部分" 和 "频繁变化的部分", 一般游戏中物体用 列表 + Rtree 的方式来表示.
+
+Rtree 用于二维和多维数据的索引, 它是一种多级平衡树, 是 Btree 在多维空间上的扩展. 在 Rtree 中存放的数据并不是原始数据, 而是这些数据的最小边界矩形(Minimal-Bounding-Box, MBR).
+
+[RTree 简介](http://xiaobaoqiu.github.io/blog/2014/06/17/r-tree/)
+
+
 
 
 
