--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -355,8 +355,7 @@ C/S MMO 架构限制:
 1. 确认期望的同时连接数
 2. 确认预期的系统瓶颈
 
-![C/S MMO 系统可能的瓶颈](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-194 P
+![C/S MMO 系统可能的瓶颈](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/MMO系统可能的瓶颈.png)
 
 ### 4.4.4 解决游戏服务器/数据库的瓶颈
 
