--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -375,8 +375,7 @@ C/S MMO 架构限制:
 
 ### 4.4.16 服务器的基本结构, 制定系统基本结构图
 
-![系统基本结构图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-210 P
+![系统基本结构图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/系统基本结构图.png)
 
 ## 4.5 进程关系图的制定
 
@@ -405,11 +404,9 @@ C/S MMO 架构限制:
 * msgsv 和 loginsv 各有一个就够了
 * authsv 通常也不需要多个
 
-![使用空间复制法的进程关系](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-212 P
+![使用空间复制法的进程关系](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/使用空间复制法的进程关系.png)
 
-![同时使用空间复制法和平行世界情况下的进程关系](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-213 P
+![同时使用空间复制法和平行世界情况下的进程关系](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/同时使用空间复制法和平行世界情况下的进程关系.png)
 
 ## 4.6 带宽/服务器资源估算
 
@@ -426,41 +423,31 @@ C/S MMO 架构限制:
 优秀的 API 调用时序:
 1. 不调用 API 是最优的
 2. 只调用没有返回值的 API, 单向时序图 
-![单向时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-228 P
+![单向时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/单向时序图.png)
 3. 只调用一次然后获取返回值的呈三角形的时序图
-![三角形时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-229 P
+![三角形时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/三角形时序图.png)
 4. 锯齿状的时序图
-![锯齿状时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-229 P
+![锯齿状时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/锯齿状时序图.png)
 
-![认证操作的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-241 P
+![认证操作的时序图1](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/认证操作的时序图1.png)
 
-![角色创建的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-242 P
+![认证操作的时序图2](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/认证操作的时序图2.png)
 
-![登录 gmsv 的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-243 P
+![角色创建的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/角色创建的时序图.png)
 
-![登录 msgsv 的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-243 P
+![登录 gmsv 的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/登录gmsv的时序图.png)
 
-![从 gmsv 登出的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-244 P
+![登录 msgsv 的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/登录msgsv的时序图.png)
 
-![gmsv 中的角色移动](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-244 P
+![从 gmsv 登出的时序图](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/从gmsv登出的时序图.png)
 
-![gmsv 中角色的商业操作](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-245 P
+![gmsv 中的角色移动](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/gmsv中的角色移动.png)
 
-![msgsv 中向好友列表添加, 删除好友](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-246 P
+![gmsv 中角色的商业操作](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/gmsv中角色的商业操作.png)
 
-![向在线好友发送消息](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/)
-246 P
+![msgsv 中向好友列表添加, 删除好友](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/msgsv中向好友列表添加删除好友.png)
+
+![向在线好友发送消息](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/向在线好友发送消息.png)
 
 ## 4.11 数据库设计图
 
