--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -466,9 +466,39 @@ Rtree 用于二维和多维数据的索引, 它是一种多级平衡树, 是 Btr
 
 [RTree 简介](http://xiaobaoqiu.github.io/blog/2014/06/17/r-tree/)
 
+# 5 [实践]P2P MO 游戏开发
 
+这类游戏状态频繁发生变化, 会产生大量数据交互, 如果使用 C/S 方式实现, 对服务器, 带宽等成本要求过高, 所以从商业角度来考虑是不行的. 因此, 即使有使用游戏外挂作弊的风险, P2P 的实现方式从经济角度来说也是合理的.
+"同步共享内存是" P2P MO 游戏开发中经常使用的特有方法.
 
+### 5.1.2 RPC 和共享内存
 
+RPC 开发方式和共享内存开发方式的比较
 
+|  | RPC 开发方式 | 共享内存开发方式 |
+| ------ | ------ | ------ |
+| 通信量 | 最小限度 | 会有多余的通信 |
+| CPU 负荷 | 最小限度 | 少量多余的运算量 |
+| 最大同时连接 | 数千 | 数十到100 |
+| 开发难易度 | 复杂 | 简单但是代码量大 |
+| 通信延迟 | 没有区别 | 没有区别 |
+| 游戏类型 | 即时性低 | 即时性高 |
+| 游戏数据规模 | 数据量大(对象数百万以上) | 数据量小(对象几百到几千) |
+| 通信方式 | 一对多 | 一对全部 |
+| 数据同步的开发时机 | 在最开始需要开发 | 可以在单机版之后扩展 |
 
+### 5.1.3 P2P MO 游戏的特点--和 C/S MMO 游戏的比较和难点
 
+* 不需要大量的数据交互
+* 配置信息对玩家是可见的
+* 不能严格保证游戏数据变更的安全性(可以作弊)
+* 不能进行 P2P 连接的 NAT 网络环境有很多
+* 不能简单的更新游戏
+* 不方便结合社交网络等网络服务
+* 玩家掉线的情况比较多
+
+### 5.1.4 P2P MO 游戏的优点
+* 延迟较少
+* 游戏服务器的带宽负荷低(甚至没有负荷)
+* 游戏服务器硬件成本低(甚至零成本)
+* 服务器维护期间也可以正常进行游戏
