--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -502,3 +502,9 @@ RPC 开发方式和共享内存开发方式的比较
 * 游戏服务器的带宽负荷低(甚至没有负荷)
 * 游戏服务器硬件成本低(甚至零成本)
 * 服务器维护期间也可以正常进行游戏
+
+### 5.3.1 P2P MO 游戏系统基本结构图
+
+P2P MO 类型游戏没有专门的服务器, 所有玩家只与共同游戏的客户端通信
+
+![P2P MMO 架构可能的瓶颈](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/P2PMO系统可能的瓶颈.png)
