--- a/网络游戏核心技术与实战.md
+++ b/网络游戏核心技术与实战.md
@@ -135,9 +135,11 @@ MO  Multi-player Online
 | 异步方式 | 100毫秒以下 | 非同步 | 冗余 | 为了在低速的网络上实现高速的游戏, 冗余性是必需的 |
 | 浏览器方式 | 300毫秒以下 | 非同步 | 非冗余 | 延迟的程度超出了用冗余性可以解决的范围, 所以将游戏数据和游戏客户端(游戏浏览器)完全分离 |
 
-同步方式是指, 运行在所有游戏玩家设备上的程序是同步的, 只要一个人的网络发生延迟, 后台程序的运行就会变慢, 所有人都会受影响.
-异步方式是指, 各个终端上的游戏进行状态是异步的, 就算某台终端上的程序停止运行, 其他终端的程序也能照常运行, 但是会看到问题终端对应的角色出现卡死
-浏览器方式是指所有游戏内容都运行在后来, 前台只起到显示的作用, 这样即使服务器以外的所有程序都停止运行, 程序也能继续运行, 不会发生数据不匹配.
+同步方式是指, 运行在所有游戏玩家设备上的程序是同步的, 星型拓扑下会有一个协调者来保证所有玩家在每一个单位时间(这个单位时间与帧速有关)内看到的状态是相同的, 只有获得了全体玩家的信息后, 游戏才能继续, 如果某个人的网络发生延迟, 同步速率就会变慢, 导致所有玩家都受影响.
+
+异步方式是指, 各个终端上的游戏进行状态是不同的, 在游戏数据的一致性方面作出妥协, 不要求数据完全一致, 就算某台终端上的程序停止运行, 其他终端的程序也能照常运行, 但是会看到问题终端对应的角色出现卡死, 正因为如此, 在异步方式下可以使用更加不稳定的传输线路和延迟更大的线路, 也可以支持更多的同时在线数.
+
+浏览器方式是指所有游戏内容都运行在后台, 前台只起到显示的作用, 这样即使服务器以外的所有程序都停止运行, 程序也能继续运行, 不会发生数据不匹配.
 
 * 游戏处理的冗余化 --> 解决主数据和副本数据之间的关系
 * 游戏处理的异步化 --> 解决数据变化时同步处理(锁)和异步处理之间的关系
@@ -508,3 +510,16 @@ RPC 开发方式和共享内存开发方式的比较
 P2P MO 类型游戏没有专门的服务器, 所有玩家只与共同游戏的客户端通信
 
 ![P2P MMO 架构可能的瓶颈](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/P2PMO系统可能的瓶颈.png)
+
+![P2P MMO 系统基本构成](https://raw.githubusercontent.com/21moons/memo/master/res/img/网络游戏核心技术与实战/P2PMO系统可能的瓶颈.png)
+329 p
+
+### 5.3.2 进程关系图
+
+C/S MMO 类型的游戏, 包含的进程有客户端程序, 游戏服务器, 登录服务器, 验证服务器和数据库服务器, 但是对于 P2P MO 游戏来说, 只有游戏客户端一种, 所以可以不用制作系统关系图的资料.
+
+* 星型拓扑结构还是网状拓扑结构
+星型拓扑结构与网状拓扑结构的区别在于, 共享客户端数据所需的链路跳数. 星型拓扑结构是 2(需要通过节点转发), 网状拓扑结构是 1(直连). 网状拓扑虽然延时较小, 但是节点间可能有不能通信的问题. 所以在不追求速度的情况下, 选择采用星型拓扑.
+
+* 同步, 非同步还是浏览器方式实现
+因为游戏基于互联网通信, 考虑网络的复杂性和不稳定性, 排除同步方式, 另外因为游戏不需要支持大量用户, 所以决定采用异步的方式实现
