--- a/游戏引擎架构.md
+++ b/游戏引擎架构.md
@@ -128,3 +128,13 @@ void drawShapes(std::list<Shape*> shapes)
 
 例如, 要设计一个图形界面用作游戏的前端, 假设定义了 window 类表示任何长方形的 GUI 元素, 另外也定义了 Rectangle 类封装数学上的长方形概念. 缺乏对经验的程序员可能会从 Rectangle 类派生出 window 类(window "是一个" Rectangle). 但一个更具弹性及封装更好的方法是, window 类引用或包含一个 Rectangle 类("用一个" 或 "有一个" 的关系). 这样, 每个类变得更简单, 更专注, 也更容易被测试, 调试, 重用.
 
+#### 3.1.2 编码标准
+
+* 接口为王: 保持接口(.h)文件整洁, 简单, 极小, 易于理解, 并有良好注释.
+* 好名字促进理解并避免混淆
+* 不要给名字空间添乱(宏会跨越全部 C/C++ 作用域及命名空间范围)
+* 遵从最好的 C++ 实践
+
+##### 3.2.1.3 定点记法(fixed-point)
+
+##### 3.2.1.4 浮点记法(floating-point)
