--- a/游戏引擎架构.md
+++ b/游戏引擎架构.md
@@ -137,4 +137,6 @@ void drawShapes(std::list<Shape*> shapes)
 
 ##### 3.2.1.3 定点记法(fixed-point)
 
+定点记法可随意选择整数部分及小数部分各用多少位去表示.
+
 ##### 3.2.1.4 浮点记法(floating-point)
