--- a/游戏引擎架构.md
+++ b/游戏引擎架构.md
@@ -137,6 +137,14 @@ void drawShapes(std::list<Shape*> shapes)
 
 ##### 3.2.1.3 定点记法(fixed-point)
 
-定点记法可随意选择整数部分及小数部分各用多少位去表示.
+定点记法用固定位数表示整数部分及小数部分.
+定点记法的缺点在于, 它同时限制了可表示整数部分的范围及小数部分的精度.
 
 ##### 3.2.1.4 浮点记法(floating-point)
+
+在浮点记法里面, 小数点可以任意移动至不同位置, 此位置由指数控制.
+
+
+
+
+
