--- a/游戏引擎架构.md
+++ b/游戏引擎架构.md
@@ -144,7 +144,7 @@ void drawShapes(std::list<Shape*> shapes)
 
 在浮点记法里面, 小数点可以任意移动至不同位置, 此位置由指数控制.
 
-
+若使用符号位 s, 尾数 m, 指数 e 去表达一个值 v, 则 $v = s \times 2^{(e-127)} \times (1 + m)$
 
 
 
