--- a/5G/网络切片技术.md
+++ b/5G/网络切片技术.md
@@ -6,5 +6,5 @@
 
 4G 网络主要服务于人, 连接网络的主要设备是智能手机, 不需要网络切片以面向不同的应用场景. 但是 5G 网络需要将一个物理网络分成多个虚拟的逻辑网络, 每一个为了实现网络切片, 网络功能虚拟化(Network Function Virtualization, NFV)是先决条件. 本质上讲, 所谓 NFV, 就是将网络中的专用设备的软硬件功能(比如核心网中的 MME, S/P- GW 和 PCRF, 无线接入网中的数字单元DU等)转移到虚拟主机(Virtual Machines, VM) 上. 这些虚拟主机是基于行业标准的商用服务器, 低成本且安装简便. 简单来说, 就是用基于行业标准的服务器, 存储和网络设备, 来取代网络中专用的网元设备, 从而实现网络 设备软硬件解耦, 达到快速开发和部署的目的.
 
-
+![多个发布与订阅系统](https://raw.githubusercontent.com/21moons/memo/master/res/img/5G/Figure_1_网络切片技术.png)
 
