--- a/5G/网络切片技术.md
+++ b/5G/网络切片技术.md
@@ -8,3 +8,16 @@
 
 ![多个发布与订阅系统](https://raw.githubusercontent.com/21moons/memo/master/res/img/5G/Figure_1_网络切片技术.png)
 
+网络经过功能虚拟化后, 无线接入网部分叫边缘云(Edge Cloud), 而核心网部分叫核心云(Core Cloud). 边缘云中的 VM 和核心云中的 VM, 通过 SDN(软件定义网络)互联互通, 也实现网络设备软硬件解耦, 也达到控制与承载彻底分离.
+
+如上图所示, 针对不同的应用场景, 网络被 "切" 成 4"片". 
+
+高清视频切片(UHD Slice): 原来网络中数字单元(Digital Unit, DU)和部分核心网功能被虚拟化后, 加上存储服务器m, 统一放入边缘云(Edge Cloud). 而部分被虚拟化的核心网功能放入核心云(Core Cloud). 
+
+手机切片(Phone Slice): 原网络无线接入部分的数字单元(DU)被虚拟化后, 放入边缘云. 而原网络的核心网功能, 包括 IMS, 被虚拟化后放入核心云.
+
+大规模物联网切片(Massive IoT Slice): 由于大部分传感器都是静止不动的, 并不需要移动性管理, 在这个切片中, 核心云的任务相对轻松简单.
+
+任务关键性物联网切片(Mission Critical IoT Slice): 由于对时延要求很高, 为了最小化端到端时延, 原网络的核心网功能和相关服务器均下沉到边缘云.
+
+当然, 网络切片技术并不仅限于这几类切片, 它是灵活的, 运营商可以随心所欲地根据应用场景定制自己的虚拟网络.
